# Derev-Ya-Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  main.py  manage.py  pyproject.toml
_project/: routes.py  urls.py  wsgi.py
_project/settings/: base.py
apps/main/: admin.py  apps.py
apps/main/api/: __init__.py
apps/main/api/v1/: serializers.py
apps/main/api/v1/views/: __init__.py  history_view.py  registration_view.py  review_view.py  video_view.py
apps/main/migrations/: 0001_initial.py  0002_video.py  0003_registration_video_content_type_and_more.py  0004_rename_created_registration_created_at.py  0005_review.py
apps/main/models/: __init__.py  base.py  cities.py  feedback.py  history.py  reviews.py  video.py
