[project]
name = "derev-ya-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-filter>=25.2",
    "django-jet-reboot>=1.3.10",
    "djangorestframework>=3.16.1",
    "drf-yasg>=1.21.11",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.1.8",
    "drf-spectacular[sidecar]>=0.28.0",
    "djangorestframework-simplejwt>=5.5.1",
]
