[project]
name = "derev-ya-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-filter>=25.2",
    "django-jet-reboot>=1.3.10",
    "djangorestframework>=3.16.1",
    "drf-yasg>=1.21.11",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.1.8",
    "drf-spectacular[sidecar]>=0.28.0",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12.0.0",
    "ruff>=0.12.9",
    "django-cors-headers>=4.9.0",
]


[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I"] #ignore = ["E501"]
exclude = ["migrations"]

[tool.ruff.lint.per-file-ignores]
"_project/settings/__init__.py" = ["F401", "F403"]
"apps/**/__init__.py" = ["F401"]  

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = [] 

[tool.ruff.format]
quote-style = "double"
